crates/rargs/tests/snapshots/test_scripts__impl-8.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] minimal.sh source"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---

args:
- rargs_source = source

