crates/rargs/tests/snapshots/test_scripts__impl-82.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stderr] commands-nested.sh file"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing command. Select one of [33mremove, show[31m[0m

File commands

[4mUsage:[0m
  file [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  file -h|--help
  file -v|--version

[4mCommands:[0m
  remove .... Edit the file
  show ...... Show file contents

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Pring version

